--- a/src/flavors/rmitcity/static/css/custom.css
+++ b/src/flavors/rmitcity/static/css/custom.css
@@ -343,7 +343,7 @@ a.reply-link:hover {
   display: none;
 }
 
-.place-student_number {
+.place-value-private-student_number {
   display: none;
 }
 
